update guide